--- a/main.css
+++ b/main.css
@@ -1,4 +1,30 @@
+body {
+    font-family: sans-serif
+}
+a {
+    text-decoration: none}
+
 li.bar {
     float: right;
     display: inline;
-    padding: 0.6em}
+    padding-left: 1%;
+    padding-right: 1%;}
+header{
+    color: aqua;
+}
+
+@keyframes intro {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+h1.hi {
+    font-size: 900%;
+    text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 25vh;
+    padding-bottom: 25vh;
+    animation-name: intro;
+    animation-duration: 4s;}
+
