--- a/main.css
+++ b/main.css
@@ -57,5 +57,12 @@ img.down {
     animation-name: pulse;
     animation-duration: 2s;
     animation-delay: 3s;
-    animation-iteration-count: infinite;
-    }
+    animation-iteration-count: infinite;}
+
+#two {
+    width: 100vw;
+    height: 101vh;
+    margin: 0;
+    padding: 0;
+    background-color: #53BEF9;
+}
