--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 body {
     font-family: sans-serif;
     padding: 0px;
-    margin: 0px;}
+    margin: 0px;
+    background-color: #53bef9}
 a {
     text-decoration: none;
     padding-top: 0px;
@@ -14,11 +15,18 @@ li.bar {
     padding-left: 1%;
     padding-right: 1%;}
 header{
-    position: -webkit-sticky;
-    position: sticky;
+    padding-top: 2%;
     float: right;
     margin-top: -70px;
-    width: 100%}
+    width: 100%;
+    height: 7vh;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 60px;
+    z-index: 999;
+    background-color: #53bef9;
+    box-shadow: 0px 0 10px rgba(0, 0, 0, 0.0);}
 
 @keyframes intro {
     from {opacity: 0;}
@@ -42,29 +50,32 @@ h1.hi {
     animation-duration: 3s;
     animation-timing-function: ease-in;}
 
-@-webkit-keyframes pulse {
+@-webkit-keyframes fad {
     0% {opacity: 0.0;}
     50% {opacity: 1.0;}
     100% {opacity: 0.0;}
 }
 
-img.downButton {
+img.next {
     opacity: 0;
     transform: scale(0.2);
     margin-top: calc(80vh - 800px);
     padding: 0px;
-    margin-left: calc(20vw - 200px);
-    animation-name: pulse;
+    margin-left: calc(17vw - 100px);
+    animation-name: fad;
     animation-duration: 2s;
     animation-delay: 3s;
     animation-iteration-count: infinite;}
 
+.changeColor {
+   background: #53bef9;
+}
+
 #two {
     width: 100vw;
-    height: 101vh;
+    height: 93vh;
     margin: 0;
     padding: 0;
-    background-color: #53bef9
 }
 
 #me {
